@@ -56,9 +56,9 @@ namespace GREATServer
 
 #if DEBUG
 			// LAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAGGGGGGGG (MonoDevelop is saying bullshit, it works)
-			config.SimulatedLoss = 0.01f;
+			/*config.SimulatedLoss = 0.01f;
 			config.SimulatedMinimumLatency = 0.05f;
-			config.SimulatedRandomLatency = 0.05f;
+			config.SimulatedRandomLatency = 0.05f;*/
 #endif
 
 			this.server = new NetServer(config);
