@@ -1,3 +1,11 @@
+2013-06-11  Jesse  <jesse.emond@hotmail.com>
+
+	* GameMatch.cs:
+	* ClientCommand.cs:
+	* PhysicsSystem.cs:
+	* PhysicsEntity.cs:
+	* StickmanChampion.cs: 
+
 2013-06-07  Jesse  <jesse.emond@hotmail.com>
 
 	* GameMatch.cs:
